# gltf

./: CMakeLists.txt
src/: gltfParser.cpp  gltfParser.hpp  main.cpp
